# molmo-motion

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES  pyproject.toml
data_generation/: .gitignore  README.md  __init__.py  requirements.txt  run_pipeline.py
data_generation/configs/: default.yaml  human_manipulation.yaml  in_the_wild.yaml  robot.yaml
data_generation/examples/: tasks_example.json
data_generation/pipeline/: __init__.py  clip_segments.py  grounding_worker.py
data_generation/scripts/: check_env.py  download_models.sh  install.sh  run_example.sh
dataset_recipes/: README.md
docs/: bspline_control_points_plan.md  dataset_refactor_plan.md
examples/: 01_quickstart.py  README.md
examples/data/: predictions_h3.jsonl
examples/data/davis_bmx_trees/: caption.txt  meta.json  points_3d_history.pt
examples/data/davis_car_turn/: caption.txt  meta.json
examples/data/davis_flamingo/: caption.txt  meta.json  (+1 more)
launch_scripts/: eval.py  eval_pointmotionbench.py  sft.py  train.py
pointmotionbench/: .gitignore  README.md
pointmotionbench/davis/: davis_captions.json
pointmotionbench/hot3d/: download_train_aria.py  extract_rgbs.py  hot3d_annotations.json  trim_hot3d_clips.py
pointmotionbench/worldtrack/: extract_worldtrack_clips.py
robotics/: README.md
robotics/configs/: molmobot_pickplace.yaml
robotics/launch_scripts/: eval.sh  train.sh
robotics/molmobot_traj/: README.md  SETUP.md  molmobot_traj_d0d71e28.patch
robotics/scripts/: build_eval_subset.py  eval_sidecar.py  prepare_training_data.py  scan_train_signatures.py  unshard_pretrained.py
scripts/: build_track_keys_cache.py  download_data.sh  infer.py  infer.sh  visualize_trajectory.py
src/molmo_motion/: __init__.py  _optional.py  config.py  dist_util.py  html_utils.py  model_configs.py  modeling.py  processor.py  public_config.py  safetensors_util.py  tokenizer.py  util.py  viz.py
tests/: gen_golden_build_example.py  test_bspline.py  test_bspline_config.py  test_bspline_roundtrip.py  test_dataset_characterization.py  test_dataset_mixture.py  test_import_surface.py  test_numerical_equivalence_model.py  test_numerical_equivalence_preproc.py
tests/data/: golden_build_example.json
(+135 files in other folders)
